bk_ida/gccida/g2/decl_attributes
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:732:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:735:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:736:1: error: use of undeclared identifier 'bitmap_element'
bitmap_element *v7; // r15 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:736:17: error: use of undeclared identifier 'v7'
bitmap_element *v7; // r15 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:737:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:745:27: error: must use 'union' tag to refer to type 'tree_node'
__int64 (  *v17)( tree *, tree_node *, tree_node *, _QWORD, bool *); // rax 
                          ^
                          union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:745:40: error: must use 'union' tag to refer to type 'tree_node'
__int64 (  *v17)( tree *, tree_node *, tree_node *, _QWORD, bool *); // rax 
                                       ^
                                       union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:746:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:748:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:749:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *j; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:751:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node **p_chain; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:754:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:756:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *returned_attrs; // [rsp+10h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:757:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *old_attrs; // [rsp+20h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:783:1: error: use of undeclared identifier 'v7'
v7 = ( bitmap_element *)attribute_tables; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:783:24: error: expected expression
v7 = ( bitmap_element *)attribute_tables; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:783:8: error: use of undeclared identifier 'bitmap_element'
v7 = ( bitmap_element *)attribute_tables; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:788:23: error: use of undeclared identifier 'v7'
next = ( const char *)v7->next->next; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/attribs.c:794:37: error: use of undeclared identifier 'v7'
next = *( const char **)( ( char *)&v7->next->next + v9); 
                                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decl_attributes/src/obj/attribs.o] Error 1
